[gd_scene load_steps=18 format=3 uid="uid://bhhbuqmuaux1h"]

[ext_resource type="Script" path="res://growingzone.gd" id="1_dbbr7"]
[ext_resource type="Texture2D" uid="uid://7rk4c0uni4sm" path="res://Tilled_Dirt_v2.png" id="2_slwr1"]
[ext_resource type="Texture2D" uid="uid://crur8426yii8q" path="res://Basic_Plants.png" id="3_7bej2"]
[ext_resource type="Texture2D" uid="uid://bppmu3uagqyns" path="res://Paths.png" id="3_72pbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8w64q"]
atlas = ExtResource("2_slwr1")
region = Rect2(0, 96, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_jud87"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w64q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwxap"]
size = Vector2(40, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyu2o"]
atlas = ExtResource("3_72pbb")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aiys8"]
atlas = ExtResource("3_7bej2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nreo7"]
atlas = ExtResource("3_7bej2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ff7n"]
atlas = ExtResource("3_7bej2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlgcf"]
atlas = ExtResource("3_7bej2")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kpq6"]
atlas = ExtResource("3_7bej2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiur0"]
atlas = ExtResource("3_7bej2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0mk0"]
atlas = ExtResource("3_7bej2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r2nw"]
atlas = ExtResource("3_7bej2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kj1q1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyu2o")
}],
"loop": true,
"name": &"none",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aiys8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nreo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ff7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlgcf")
}],
"loop": true,
"name": &"oniongrowing",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kpq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiur0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0mk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r2nw")
}],
"loop": true,
"name": &"wheatgrowing",
"speed": 0.0
}]

[node name="growingzone" type="StaticBody2D"]
script = ExtResource("1_dbbr7")

[node name="hoedland" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_jud87")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_bwxap")

[node name="plant" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -12)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_kj1q1")
animation = &"none"

[node name="wheatgrowtimer" type="Timer" parent="."]
wait_time = 5.0

[node name="oniongrowtimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="timeout" from="wheatgrowtimer" to="." method="_on_wheatgrowtimer_timeout"]
[connection signal="timeout" from="oniongrowtimer" to="." method="_on_oniongrowtimer_timeout"]
